[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/controllers/DesktopController.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/tooltip/Tooltip.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/CameraDataUpdater.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/tools_menu/ToolsMenu.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape3D" id=1]
radius = 0.5

[node name="Player" type="CharacterBody3D"]
script = ExtResource( 1 )
tools_root_path = NodePath("H_Pivot/V_Pivot/Camera3D/Tools_Root")
tooltip_path = NodePath("H_Pivot/V_Pivot/Camera3D/Tooltip")
gravity = Vector3( 0, 0, 0 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="H_Pivot" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )

[node name="V_Pivot" type="Node3D" parent="H_Pivot"]

[node name="Camera3D" type="Camera3D" parent="H_Pivot/V_Pivot"]
current = true
far = 120.0
script = ExtResource( 4 )

[node name="Tools_Root" type="Node3D" parent="H_Pivot/V_Pivot/Camera3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )

[node name="Tooltip" parent="H_Pivot/V_Pivot/Camera3D" instance=ExtResource( 3 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 50
follow_viewport_enabled = true

[node name="Tools_Menu" parent="." instance=ExtResource( 5 )]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
